--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Əsas Fon Rəngi */
 body {
-    background-color: #0F172A;
-    color: white;
+  background-color: #0F172A;
+  color: white;
 }
